[tool.poetry]
name = "finuslugi-telegram-bot"
version = "0.1.0"
description = ""
authors = ["xirurg <xirurg124@gmail.com>"]
readme = "README.md"
packages = [{include = "finuslugi_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.1"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
